--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ p{
   font-size: 16px;
   color: #6694c4;
   color: #9d9fa0;
+  color: #86888c;
 }
 
 hr {
@@ -243,4 +244,8 @@ h3#h3Contact {
 
 footer{
   padding-top:10px;
+}
+
+#copyrightText {
+	color: #9d9fa0;
 }
