--- a/css/style2.css
+++ b/css/style2.css
@@ -22,6 +22,12 @@ h2 {
 	display: flex;
 	justify-content: center;
 	padding: 10px 0px 20px 0px;
+	/*width: 80%;*/
+}
+
+.eachImage {
+	width: 100%;
+	height: 100%;
 }
 
 .tenTypes {
