--- a/css/style2.css
+++ b/css/style2.css
@@ -93,6 +93,7 @@ p{
   color: #6694c4;
   color: #9d9fa0;
   color: #86888c;
+  color: #6d6d6d;
   text-indent: 20px;
   /*letter-spacing: 0.5px;*/
   line-height: 1.6;
