--- a/css/style2.css
+++ b/css/style2.css
@@ -86,6 +86,22 @@ h2 {
 	        transition: display 2s ease-in;
 }
 
+.resourcesLinks {
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+}
+
+.resourcesLink {
+
+}
+
+.resourcesLink:hover {
+	text-decoration: none;
+	font-size: 25px;
+	color: blue;
+}
+
 p{
   font-family:Roboto;
   font-weight: 400;
