--- a/css/style2.css
+++ b/css/style2.css
@@ -118,7 +118,14 @@ p{
 
 .noIndent {
 	text-indent: 0px;
-	font-size: 13px;
+	
+}
+.smallText {
+	font-size: 14.5px;
+}
+
+.h6Text {
+	font-size: 17px;
 }
 
 
