--- a/css/style2.css
+++ b/css/style2.css
@@ -265,7 +265,7 @@ a.navbar-brand {
 	font-weight: 500;
 	border: rgba(8, 178, 79, 0.8) solid 1px;
 	color: #2c6ccc;
-	
+	margin-right: 20px;
 	border: rgba(44, 108, 204, 0.8) solid 1px;
 	/*transition: background-color 0.3s;*/
 }
