--- a/css/style3.css
+++ b/css/style3.css
@@ -256,7 +256,11 @@ a.navbar-brand {
 
 .showcase-one {
 	/*display: block;*/
-
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start
+	-ms-align-items: center;
+	align-items: center;;
 }
 
 .showcase-column {
@@ -309,6 +313,9 @@ a.navbar-brand {
 	border-radius: 10px;
 	box-shadow: 8px 8px 10px #aaaaaa;
 }
+
+/* ------------------------- footer  ---------------------*/
+
 
 form {
 	width: 400px;
@@ -408,7 +415,7 @@ textarea.form-control {
 
 .width100 {
 	width: 100%;
-	
+
 }
 
 i {
@@ -459,5 +466,185 @@ footer{
 
 #copyrightText {
 	color: #9d9fa0;
+}
+
+/* --- ---- ---- - --- --- Main Contact Form --- - - - - ---- */
+
+
+form {
+	width: 400px;
+	display: flex;
+	flex-direction: column;
+	text-align: center;
+}
+
+input, textarea {
+	border: #abc3e8 solid 1px !important;
+	color: #2c6ccc;
+}
+
+input:focus, textarea:focus {
+	border: rgba(44, 108, 204, 0.6) solid 1px !important;
+	color: #2c6ccc;
+}
+
+label {
+	color: #2c6ccc;
+}
+
+.form-control::-webkit-input-placeholder { color: rgba(44, 108, 204, 0.5); }  /* WebKit, Blink, Edge */
+.form-control:-moz-placeholder { color: rgba(44, 108, 204, 0.5); }  /* Mozilla Firefox 4 to 18 */
+.form-control::-moz-placeholder { color: rgba(44, 108, 204, 0.5); }  /* Mozilla Firefox 19+ */
+.form-control:-ms-input-placeholder { color: rgba(44, 108, 204, 0.5); }  /* Internet Explorer 10-11 */
+.form-control::-ms-input-placeholder { color: rgba(44, 108, 204, 0.5); }  /* Microsoft Edge */
+
+.btn-submit {
+		background-color: rgba(44, 108, 204, 0.9);
+		color: white;
+		border: white 1px solid;
+		font-size: 16px;
+
+		align-self: flex-end;
+		width: 30%;
+		text-align: center;
+}
+
+.btn-submit:hover {
+		background-color: rgba(44, 108, 204, 1);
+		color: white;
+		font-size: 17px;
+}
+
+#contactName2 {
+	width: 400px;
+}
+#contactPhone2 {
+	width: 400px;
+}
+
+#contact {
+	padding: 20px 0px;
+	  background-blend-mode: lighten;
+	      background-color: rgba(219, 219, 219, 0.5);
+	      background-color: rgba(44, 108, 204, 0.1);
+
+}
+
+.contactFooterContainer {
+	display: flex;
+	justify-content: space-between;
+}
+
+.contactInfo {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	background-color: #878787;
+	background-color: rgba(44, 108, 204, 0.9);
+	width: 40%;
+	color: #fff;
+	border-radius: 20px;
+}
+
+.eachContactInfo {
+	text-indent: 0px;
+}
+
+#h3Contact {
+	margin-bottom: 20px;
+	color: #fff !important;
+}
+
+#contact p {
+	color: #fff;
+	margin-bottom: 15px;
+	font-size: 15px;
+	font-family:Poppins;
+}
+
+.width100p2 {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+}
+
+i {
+	font-size: 18px;
+	
+}
+
+#contactEmail2 {
+	width: 400px;
+}
+#contactMessage2 {
+	width: 400px;
+}
+
+label {
+	color: #2c6ccc;
+	text-align: right;
+	clear: both;
+    float:left;
+    margin-right:  10px;
+    margin-bottom: 0;
+    margin-top: 7px;
+}
+
+textarea.form-control2 {
+	margin: 0;
+	width: 80%;
+	height: 200px;
+}
+
+input {
+	display: block;
+	width: 100%;
+
+}
+.form-group {
+	width: 100%;
+
+}
+
+.form-group2 {
+	
+	display: flex;
+	justify-content: center;
+
+}
+
+footer{
+  padding-top:10px;
+}
+
+.grouping {
+	display: flex;
+	justify-content: center;
+}
+
+
+#copyrightText {
+	color: #9d9fa0;
+}
+
+.formContainer2 {
+	display: flex;
+	/*flex-direction: column;*/
+	width: 100%;
+	justify-content: center;
+	-ms-align-items: center;
+	align-items: center;
+	align-self: center;
+}
+
+#contactPageForm {
+	width: 100%;
+	margin-top: 30px;
+	height: 500px;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
 }
 
