--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,161 @@
+* {
+	margin: 0;
+	padding: 0;
+	-webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+
 body {
-margin-top: 55px;
+margin-top: 60px;
 
 }
+
+
+/*------------------NAVBAR------------------*/
+
+.navTopContainer {
+ 	padding: 0% 10%;
+ 	width: 100%;
+ 	display: flex;
+ 	justify-content: center;
+ 	background-color: #2c6ccc;
+ 	position: fixed;
+ 	top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1000;
+}
+
+nav {
+     position: absolute;
+     position: relative;
+    
+    height: 53px;
+    
+	width: 100%;
+	background-color: #2c6ccc;
+	display: flex;
+	justify-content: space-between;	
+}
+
+nav p a{
+	text-decoration: none;
+	color: #fff;
+	float: left;
+	line-height: 55px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-family:Poppins;
+	font-weight: 400;
+  	font-size: 18px;
+
+}
+
+nav ul {
+	float: left;
+}
+
+nav ul li {
+	float: left;
+	list-style: none;
+	position: relative;
+}
+
+nav ul li a {
+	display: block;
+	font-family:Poppins;
+	font-size: 16px;
+	color: #fff;
+	padding: 14px  20px;
+	text-decoration: none;
+}
+
+nav ul li a:hover{
+	text-decoration: none;
+	color: #fff;
+}
+
+nav ul li ul {
+	display: none;
+	position: absolute;
+    border-radius: 0px 0px 10px 10px;
+    padding: 0;
+	border: none;
+}
+
+nav ul li:hover {
+	background-color: #154c99;
+}
+
+nav ul li:hover ul {
+	display: block;
+	background-color: #154c99;
+ 	border-radius: 0px 0px 10px 10px;
+
+}
+
+nav ul li ul li {
+	width: 250px;
+	border-radius: 4px;
+}
+
+nav ul li ul li a{
+	padding: 8px  14px;
+	text-align: center;
+	background-color: #2c6ccc;
+	font-size: 15px;
+	border-radius: 4px;
+}
+
+nav ul li ul li a:hover {
+	background-color: #154c99;
+}
+
+.under65 {
+	width: 200px;
+}
+
+.moreInfo {
+	width: 114px;
+}
+
+
+
+
+
 
 h1,h2,h3,h4,h5,h6,a{
   font-family:Poppins;
   color: #444444;
 }
 
-.extraContainer {
-	display: flex;
-	justify-content: center;
+h1, h2, h3 {
+	
+	margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+h2 {
+	font-weight: 500;
+	font-size: 30px;
+}
+
+h2 a{
+	text-decoration: none;
+	font-weight: 500;
+	font-size: 30px;
 }
 
 h2 a:hover {
-	text-decoration: none;
 	color: #2c6ccc;
+}
+
+h4 {
+	font-weight: 400;
+	font-size: 22px;
 }
 
 .h2-blue {
@@ -32,6 +172,7 @@ h2 a:hover {
 
 .h2text {
 	margin-bottom: 15px;
+	align-self: center;
 }
 
 h3 {
@@ -44,143 +185,165 @@ p{
   font-size: 16px;
   color: #6694c4;
   color: #9d9fa0;
-  color: #86888c;
+  /*color: #86888c;*/
   /*color: #6d6d6d;*/
+  line-height: 1.3;
+  margin-bottom: 10px;
+  text-align: justify;
+  /*text-indent: 20px;*/
 }
 
 hr {
-	background-color: rgba(44, 108, 204, 0.5);
-	height: 1px;
+	background-color: rgba(44, 108, 204, 0.5) !important;
+	height: 2px;
+	width: 100%;
 }
 
-.navTopContainer {
-	padding: 0;
-}
-.navbar {
-	margin-bottom: 0;
-	/*background-color: rgba(53, 101, 178, 0.9);*/
-
-	border: none;
-	background-color: #fff;
-
-	font-family:Poppins;
-	font-size: 16px;
-	background-color: #08b24f;
-	background-color: #2c6ccc;
-	background-color: #e0ebfc;
-	background-color: #e3ecf9;
-	background-color: #2c6ccc;
-}
-
-.navbar-default {
-	background-color: #2c6ccc !important;
-}
-
-.navbar a {
-	color: white !important;
-	/*color: #2c6ccc !important;*/
-}
-
-.navbar ul li a:hover {
-	
-	color: white !important;
-	background-color: #154c99 !important;
-}
-
-a.dropdown-toggle {
-	background-color: #2c6ccc !important;
-	margin: 0;
-}
-
-.dropdown-menu {
-	background-color: #2c6ccc;
-}
-
-ul.dropdown-menu {
-	padding: 0;
-	border: none;
-}
-
-.dropdown-menu li a {
-	padding: 10px 20px;
-	font-size: 15px;
+.container {
+	width: 1170px;
+	padding: 0px 15px;
+	margin: 0 auto;
+	display: flex;
+	justify-content: center;
 }
 
 .jumbotron {
 	/*padding: 100px 20px;*/
+	width: 1140px;
+	
+	border-radius: 6px;
+	padding: 70px 60px;
 	background: url(../img/USA.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
-/*	opacity: 0.2;
-	z-index: -10;*/
 	  background-blend-mode: lighten;
 	      background-color: rgba(247, 250, 252, 0.8);
 	      color: #113b7c;
+
+
+    margin-bottom: 30px;
+    color: inherit;
+   
+}
+
+.jumbotron h1 {
+    font-size: 63px;
+    font-family:Poppins;
+    font-weight: 500;
+	margin-bottom: 10px;
+     line-height: 1.1;
+     color: #113b7c;
 }
 
 .jumbotron p {
-	color: #113b7c;
-	font-weight: 400;
+    color: #113b7c;
+    font-weight: 400;
+      font-family:Roboto;
+  font-weight: 400;
+  font-size: 16px;
+  margin-bottom: 25px;
+  font-size: 21px;
+  line-height: 1.5;
 }
 
 .btn-primary {
-	background-color: #2c6ccc !important;
+	background-color: #2c6ccc;
+	 color: #fff;
+	 text-decoration: none;
+	 padding: 10px 15px;
+	 border-radius: 6px;
+	 font-size: 18px;
+
 }
 
 .btn-primary:hover {
-	background-color: #2359aa !important;
+	/*text-decoration: none;*/
+    background-color: #2359aa !important;
+        color: #fff;
+    background-color: #286090;
+    border-color: #204d74;
 }
 
-.navbar-default .navbar-toggle .icon-bar {
-    background-color: white;
+.wholeSection {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
 }
 
-
-a.navbar-brand {
-	font-size: 16px;
-	padding: 15px 0;
+.row {
+	display: flex;
+	justify-content: center;
+	/*align-items: center;*/
+	margin-bottom: 10px;
+	padding: 15px 10px 10px 10px;
+	width: 100%;
 }
 
-.navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
-    background-color: #2c6ccc;
+.col-30 {
+	width: 40%;
 }
 
-/*.jumbotron p, h1 {
-	z-index: 100;
-}*/
+.col-70 {
+	width: 60%;
+	/*padding: 0px 10px; */
+}
+
+.col-50 {
+	width: 50%;
+}
 
 
 #showcase {
-	margin: 10px 0px;
+	margin: 0px 0px;
+	padding: 0;
 }
 
 
-
 .showcase-btn {
+	text-decoration: none;
 	color: #07ba52;
 	font-weight: 500;
 	border: rgba(8, 178, 79, 0.8) solid 1px;
 	color: #2c6ccc;
-	align-self: center;
+	margin: 5px;
 	border: rgba(44, 108, 204, 0.8) solid 1px;
-	/*transition: background-color 0.3s;*/
+	padding: 5px 10px;
+	 border-radius: 4px;
+	 font-size: 12px;
+	 line-height: 1.5;
+	 /*transition: all 0.5s linear;*/
 }
 
 .showcase-btn:hover {
 	background-color: rgba(44, 108, 204, 0.8);
 	color: white;
 	border: white solid 1px;
-
 }
 
-
-#showcase-left-container {
+.showcase-right {
+	padding-left: 10px;
+	width: 100%;
+	height: 100%;
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
-	align-items: center;
-	margin-bottom: 15px;
-	/*display: block;*/
+	align-items: flex-start;
 }
+
+
+.showcase-left {
+	padding-right: 10px;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: flex-start;
+}
+
+
 
 .showcase-container {
 	display: flex;
@@ -190,55 +353,82 @@ a.navbar-brand {
 	margin-bottom: 15px;
 }
 
+.groupingBtn {
+	display: flex;
+	justify-content: flex-start;
+}
+
 #resources {
-	/*margin: 10px;*/
-	/*border-right: 1px dashed rgba(44, 108, 204, 0.5);*/
-	/*border-left: 1px solid rgba(44, 108, 204, 0.5);*/
 	margin-bottom: 20px;
+}
+
+.imgContainer {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	-ms-align-items: center;
+	align-items: center;
 }
 
 .imgMDPlans {
 	width: 90%;
-	
 	margin-left: 30px;
 	border-radius: 10px;
 	box-shadow: 8px 8px 10px #aaaaaa;
+	vertical-align: middle;
+	border: 0px;
+}
+
+
+.imgMDPlans2 {
+	width: 80%;
+	margin-left: 30px;
+	border-radius: 10px;
+	box-shadow: 8px 8px 10px #aaaaaa;
+	vertical-align: middle;
+	border: 0px;
+}
+
+h2 a i {
+	font-size: 25px;
 }
 
 #resourcesImg {
 	width: 50%;
 	margin-top: 10px;
-	/*height: 100%;*/
-	/*margin-left: 30px;*/
 	border-radius: 10px;
-	/*box-shadow: 8px 8px 10px #aaaaaa;*/
 }
 
 #seminarsImg {
-	width: 30%;
+	width: 28%;
 	margin-top: 20px;
 	margin-bottom: 3.25%;
-	/*height: 100%;*/
-	/*margin-left: 30px;*/
 	border-radius: 10px;
-	/*box-shadow: 8px 8px 10px #aaaaaa;*/
 }
 
-/*.NavContainer {
-    width: 900px;
- }*/
+
+/*  --  - --  --  FOOTER -- - - - -- -  -- */
 
 form {
-	width: 400px;
+	height: 200px;
+	width: 350px;
 	display: flex;
 	flex-direction: column;
 	text-align: center;
+	justify-content: space-between;
+	/*align-items: center;*/
 
+}
+
+.formContainer {
+	width: 100%;
+	height: 100%;
 }
 
 input, textarea {
 	border: #abc3e8 solid 1px !important;
 	color: #2c6ccc;
+	/*margin: 10px;*/
 }
 
 input:focus, textarea:focus {
@@ -254,27 +444,39 @@ input:focus, textarea:focus {
 
 
 .form-control {
-
+	padding: 5px 8px;
 	color: #2c6ccc;
+	width: 100%;
+	display: flex;
+	   
+	    height: 34px;
+	    padding: 6px 12px;
+	    font-size: 14px;
+	    line-height: 1.42857143;
+	
+	    background-color: #fff;
+	    background-image: none;
+	   
+	    border-radius: 4px;
+	
+	        box-shadow: inset 0 1px 1px rgba(0,0,0,.075);rgba(0,0,0,.075);
+	    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 }
 
 
-#contactName {
-	width: 175px;
-}
-#contactPhone {
-	width: 125px;
-}
+
 
 .btn-submit {
 		background-color: rgba(44, 108, 204, 0.9);
 		color: white;
 		border: white 1px solid;
 		font-size: 16px;
-		
+		padding: 5px 10px;
 		align-self: flex-end;
 		width: 30%;
+		border-radius: 5px;
 		text-align: center;
+		cursor: pointer;
 }
 
 .btn-submit:hover {
@@ -293,7 +495,11 @@ input:focus, textarea:focus {
 
 .contactFooterContainer {
 	display: flex;
-	justify-content: space-between;
+	flex-direction: row;
+	justify-content: space-around;
+	align-items: center;
+	width: 75%;
+	height: 100%;
 }
 
 .contactInfo {
@@ -303,15 +509,21 @@ input:focus, textarea:focus {
 	flex-direction: column;
 	background-color: #878787;
 	background-color: rgba(44, 108, 204, 0.9);
-	width: 35%;
+	width: 600px;
+	/*height: 250px;*/
 	color: #fff;
 	border-radius: 20px;
+	padding: 30px;
 
 }
 
+/*.info-leftm, .info-right {
+	width: 100%;
+}*/
+
 h3#h3Contact {
-	margin-bottom: 20px
-	color: #fff !important;
+	margin-bottom: 10px;
+	color: #fff;
 }
 
 #contact p {
@@ -322,7 +534,7 @@ h3#h3Contact {
 }
 
 textarea.form-control {
-	height: auto;
+	height: 80px;
 }
 
 .width100 {
@@ -335,11 +547,26 @@ i {
 	
 }
 
+
+/*.grouping {
+	display: flex;
+	justify-content: space-between;
+}*/
+
+#contactName {
+	width: 80%;
+	align-self: flex-start;
+}
+#contactPhone {
+	width: 80%;
+	align-self: flex-end;
+}
+
 #contactEmail {
-	width: 372px;
+	width: 90%;
 }
 #contactMessage {
-	width: 372px;
+	width: 90%;
 }
 
 label {
@@ -350,31 +577,66 @@ label {
     margin-right:  10px;
     margin-bottom: 0;
     margin-top: 7px;
+
 }
 
-textarea {
-	margin: 0;
-	width: 80%;
-}
 
 input {
-	display: block;
-	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	width: auto;
+	margin: 0;
 
 }
-.form-group {
-	width: 100%;
-}
 
 .form-group {
+	width: 100%;
 	display: flex;
 	justify-content: space-between;
 }
 
+
 footer{
   padding-top:10px;
+  display: flex;
+  justify-content: center;
 }
 
 #copyrightText {
 	color: #9d9fa0;
+}
+
+
+/*  - - - --- - -- - -- - - - - - Responsive Design --- - - - - - - - - - - - - - -- - */
+
+@media only screen and (max-width: 1024px) {
+
+	.container {
+		width: 900px;
+	}
+
+	.navbar {
+	
+		font-size: 15px;
+	}
+
+	li a {
+		padding: 0;
+	}
+
+	.contactFooterContainer {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
+
+	form {
+		width: 300px;
+	}
+
+	.contactInfo {
+		width: 300px;
+		padding: 15px;
+	}
+
 }
