--- a/css/style3.css
+++ b/css/style3.css
@@ -1,11 +1,139 @@
+* {
+	margin: 0;
+	padding: 0;
+	-webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+
 body {
-margin-top: 55px;
+margin-top: 60px;
 
 }
 
-/*.NavContainer {
-    width: 900px;
- }*/
+
+/*------------------NAVBAR------------------*/
+
+.navTopContainer {
+ 	padding: 0% 10%;
+ 	width: 100%;
+ 	display: flex;
+ 	justify-content: center;
+ 	background-color: #2c6ccc;
+ 	position: fixed;
+ 	top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1000;
+}
+
+nav {
+     position: absolute;
+     position: relative;
+    
+    height: 53px;
+    
+	width: 100%;
+	background-color: #2c6ccc;
+	display: flex;
+	justify-content: space-between;	
+}
+
+nav p a{
+	text-decoration: none;
+	color: #fff;
+	float: left;
+	line-height: 55px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-family:Poppins;
+	font-weight: 400;
+  	font-size: 18px;
+
+}
+
+nav ul {
+	float: left;
+}
+
+nav ul li {
+	float: left;
+	list-style: none;
+	position: relative;
+}
+
+nav ul li a {
+	display: block;
+	font-family:Poppins;
+	font-size: 16px;
+	color: #fff;
+	padding: 14px  20px;
+	text-decoration: none;
+}
+
+nav ul li a:hover{
+	text-decoration: none;
+	color: #fff;
+}
+
+nav ul li ul {
+	display: none;
+	position: absolute;
+    border-radius: 0px 0px 10px 10px;
+    padding: 0;
+	border: none;
+}
+
+nav ul li:hover {
+	background-color: #154c99;
+}
+
+nav ul li:hover ul {
+	display: block;
+	background-color: #154c99;
+ 	border-radius: 0px 0px 10px 10px;
+
+}
+
+nav ul li ul li {
+	width: 250px;
+	border-radius: 4px;
+}
+
+nav ul li ul li a{
+	padding: 8px  14px;
+	text-align: center;
+	background-color: #2c6ccc;
+	font-size: 15px;
+	border-radius: 4px;
+}
+
+nav ul li ul li a:hover {
+	background-color: #154c99;
+}
+
+nav ul li a i {
+	font-size: 12px;
+}
+
+.under65 {
+	width: 200px;
+}
+
+.moreInfo {
+	width: 125px;
+}
+
+
+.container {
+	width: 1170px;
+	padding: 0px 10px;
+	margin: 0 auto;
+	display: flex;
+	justify-content: center;
+}
 
 h1,h2,h3,h4,h5,h6,a{
   font-family:Poppins;
@@ -23,7 +151,8 @@ h3 {
 h2 {
 	/*color: #fff;*/
 	font-weight: bold;
-	/*font-size: 16px;*/
+	font-size: 30px;
+	color: #2c6ccc;
 }
 
 h2 a:hover {
@@ -31,85 +160,9 @@ h2 a:hover {
 	color: #2c6ccc;
 }
 
-.imgContent {
-	display: flex;
-	justify-content: center;
-	padding: 10px 0px 20px 0px;
-	/*width: 80%;*/
-}
-
-.eachImage {
-	width: 100%;
-	height: 100%;
-}
-
-.tenTypes {
-	font-family:Poppins;
-	color: black;
-	cursor: pointer;
-	font-size: 19px;
-}
-
-.tenTypes:hover {
-	font-size: 20px;
-	/*background-color: #fff;*/
-	text-decoration: underline;
-}
-
-.tenTypesContainer {
-	display: flex;
-	justify-content: center;
-	align-items: flex-start;
-	flex-direction: column;
-	width: 100%;
-}
-
-.tenTypesTextBox {
-	width: 90%;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	padding: 20px 40px;
-	background-color: #e0ebfc;
-	-ms-align-self: center;
-	align-self: center;
-	display: none;
-	-webkit-transition: display 2s ease-in;
-	   -moz-transition: display 2s ease-in;
-	    -ms-transition: display 2s ease-in;
-	     -o-transition: display 2s ease-in;
-	        transition: display 2s ease-in;
-}
 
 
 
-.tenTypesText {
-	color: #6d6d6d;
-}
-.open {
-	display: flex;
-	-webkit-transition: display 2s ease-in;
-	   -moz-transition: display 2s ease-in;
-	    -ms-transition: display 2s ease-in;
-	     -o-transition: display 2s ease-in;
-	        transition: display 2s ease-in;
-}
-
-.resourcesLinks {
-	display: flex;
-	justify-content: center;
-	flex-direction: column;
-}
-
-.resourcesLink {
-
-}
-
-.resourcesLink:hover {
-	text-decoration: none;
-	font-size: 25px;
-	color: #2c6ccc;
-}
 
 p{
   font-family:Roboto;
@@ -139,9 +192,10 @@ p{
 
 
 .mainContent {
+	width: 100%;
 	padding: 30px 50px;
-	/*display: flex;*/
-	/*justify-content: center;*/
+	display: flex;
+	justify-content: center;
 }
 
 hr {
@@ -158,75 +212,8 @@ hr {
 	background-color: rgba(226, 226, 226, 0.2);
 }
 
-.navTopContainer {
-	padding: 0;
-}
-.navbar {
-	margin-bottom: 0;
-	/*background-color: rgba(53, 101, 178, 0.9);*/
 
-	border: none;
-	background-color: #fff;
 
-	font-family:Poppins;
-	font-size: 16px;
-	background-color: #08b24f;
-	background-color: #2c6ccc;
-	background-color: #e0ebfc;
-	background-color: #e3ecf9;
-	background-color: #2c6ccc;
-}
-
-.navbar-default {
-	background-color: #2c6ccc !important;
-}
-
-.navbar a {
-	color: white !important;
-	/*color: #2c6ccc !important;*/
-}
-
-.navbar ul li a:hover {
-	
-	color: white !important;
-	background-color: #154c99 !important;
-}
-
-a.dropdown-toggle {
-	background-color: #2c6ccc !important;
-	margin: 0;
-}
-
-.dropdown-menu {
-	background-color: #2c6ccc;
-}
-
-ul.dropdown-menu {
-	padding: 0;
-	border: none;
-}
-
-.dropdown-menu li a {
-	padding: 10px 20px;
-	font-size: 15px;
-}
-
-.jumbotron {
-	/*padding: 100px 20px;*/
-	background: url(USA.jpg);
-	background-repeat: no-repeat;
-	background-size: cover;
-/*	opacity: 0.2;
-	z-index: -10;*/
-	  background-blend-mode: lighten;
-	      background-color: rgba(247, 250, 252, 0.8);
-	      color: #113b7c;
-}
-
-.jumbotron p {
-	color: #113b7c;
-	font-weight: 400;
-}
 
 .btn-primary {
 	background-color: #2c6ccc !important;
@@ -241,18 +228,7 @@ ul.dropdown-menu {
 }
 
 
-a.navbar-brand {
-	font-size: 16px;
-	padding: 15px 0;
-}
 
-.navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
-    background-color: #2c6ccc;
-}
-
-/*.jumbotron p, h1 {
-	z-index: 100;
-}*/
 
 .showcase-one {
 	/*display: block;*/
@@ -260,7 +236,8 @@ a.navbar-brand {
 	flex-direction: column;
 	justify-content: flex-start
 	-ms-align-items: center;
-	align-items: center;;
+	align-items: center;
+	width: 100%;
 }
 
 .showcase-column {
@@ -307,207 +284,66 @@ a.navbar-brand {
 	margin-bottom: 15px;
 }
 
-.imgMDPlans {
-	width: 90%;
-	margin-left: 30px;
-	border-radius: 10px;
-	box-shadow: 8px 8px 10px #aaaaaa;
-}
-
-/* ------------------------- footer  ---------------------*/
 
 
-form {
-	width: 400px;
-	display: flex;
-	flex-direction: column;
-	text-align: center;
-}
-
-input, textarea {
-	border: #abc3e8 solid 1px !important;
-	color: #2c6ccc;
-}
-
-input:focus, textarea:focus {
-	border: rgba(44, 108, 204, 0.6) solid 1px !important;
-	color: #2c6ccc;
-}
-
-label {
-	color: #2c6ccc;
-}
-
-.form-control::-webkit-input-placeholder { color: rgba(44, 108, 204, 0.5); }  /* WebKit, Blink, Edge */
-.form-control:-moz-placeholder { color: rgba(44, 108, 204, 0.5); }  /* Mozilla Firefox 4 to 18 */
-.form-control::-moz-placeholder { color: rgba(44, 108, 204, 0.5); }  /* Mozilla Firefox 19+ */
-.form-control:-ms-input-placeholder { color: rgba(44, 108, 204, 0.5); }  /* Internet Explorer 10-11 */
-.form-control::-ms-input-placeholder { color: rgba(44, 108, 204, 0.5); }  /* Microsoft Edge */
-
-.btn-submit {
-		background-color: rgba(44, 108, 204, 0.9);
-		color: white;
-		border: white 1px solid;
-		font-size: 16px;
-
-		align-self: flex-end;
-		width: 30%;
-		text-align: center;
-}
-
-.btn-submit:hover {
-		background-color: rgba(44, 108, 204, 1);
-		color: white;
-		font-size: 17px;
-}
-
-#contactName {
-	width: 175px;
-}
-#contactPhone {
-	width: 125px;
-}
-
-#contact {
-	padding: 20px 0px;
-	  background-blend-mode: lighten;
-	      background-color: rgba(219, 219, 219, 0.5);
-	      background-color: rgba(44, 108, 204, 0.1);
-
-}
-
-.contactFooterContainer {
-	display: flex;
-	justify-content: space-between;
-}
-
-.contactInfo {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-	background-color: #878787;
-	background-color: rgba(44, 108, 204, 0.9);
-	width: 40%;
-	color: #fff;
-	border-radius: 20px;
-}
-
-.eachContactInfo {
-	text-indent: 0px;
-}
-
-#h3Contact {
-	margin-bottom: 20px;
-	color: #fff !important;
-}
-
-#contact p {
-	color: #fff;
-	margin-bottom: 15px;
-	font-size: 15px;
-	font-family:Poppins;
-}
-
-textarea.form-control {
-	height: auto;
-}
-
-.width100 {
-	width: 100%;
-
-}
-
-i {
-	font-size: 18px;
-	
-}
-
-#contactEmail {
-	width: 372px;
-}
-#contactMessage {
-	width: 372px;
-}
-
-label {
-	color: #2c6ccc;
-	text-align: right;
-	clear: both;
-    float:left;
-    margin-right:  10px;
-    margin-bottom: 0;
-    margin-top: 7px;
-}
-
-textarea {
-	margin: 0;
-	width: 80%;
-}
-
-input {
-	display: block;
-	width: 100%;
-
-}
-.form-group {
-	width: 100%;
-}
-
-.form-group {
-	display: flex;
-	justify-content: space-between;
-}
-
-footer{
-  padding-top:10px;
-}
-
-
-#copyrightText {
-	color: #9d9fa0;
-}
 
 /* --- ---- ---- - --- --- Main Contact Form --- - - - - ---- */
 
 
-form {
-	width: 400px;
-	display: flex;
-	flex-direction: column;
-	text-align: center;
-}
-
-input, textarea {
-	border: #abc3e8 solid 1px !important;
-	color: #2c6ccc;
-}
-
-input:focus, textarea:focus {
-	border: rgba(44, 108, 204, 0.6) solid 1px !important;
-	color: #2c6ccc;
-}
-
-label {
-	color: #2c6ccc;
-}
-
 .form-control::-webkit-input-placeholder { color: rgba(44, 108, 204, 0.5); }  /* WebKit, Blink, Edge */
 .form-control:-moz-placeholder { color: rgba(44, 108, 204, 0.5); }  /* Mozilla Firefox 4 to 18 */
 .form-control::-moz-placeholder { color: rgba(44, 108, 204, 0.5); }  /* Mozilla Firefox 19+ */
 .form-control:-ms-input-placeholder { color: rgba(44, 108, 204, 0.5); }  /* Internet Explorer 10-11 */
 .form-control::-ms-input-placeholder { color: rgba(44, 108, 204, 0.5); }  /* Microsoft Edge */
 
+
+
+
+.form-control {
+	padding: 5px 8px;
+	color: #2c6ccc;
+	width: 100%;
+	display: flex;
+	   
+	    height: 34px;
+	    padding: 6px 12px;
+	    font-size: 14px;
+	    line-height: 1.42857143;
+	
+	    background-color: #fff;
+	    background-image: none;
+	   
+	    border-radius: 4px;
+		
+	        box-shadow: inset 0 1px 1px rgba(0,0,0,.075);rgba(0,0,0,.075);
+	    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
+
+input, textarea {
+	border: #abc3e8 solid 1px !important;
+	color: #2c6ccc;
+	border-radius: 4px;
+	padding: 5px 10px;
+	font-size: 14px;
+}
+
 .btn-submit {
 		background-color: rgba(44, 108, 204, 0.9);
 		color: white;
 		border: white 1px solid;
 		font-size: 16px;
-
+		padding: 6px 12px;
 		align-self: flex-end;
 		width: 30%;
+		cursor: pointer;
 		text-align: center;
+		font-weight: 400;
+		line-height: 1.4;
+		border-radius: 4px;
 }
+
+
+
 
 .btn-submit:hover {
 		background-color: rgba(44, 108, 204, 1);
@@ -652,4 +488,71 @@ p #copyrightText {
 
 #contactUs {
 	color: #2c6ccc;
+}
+
+
+
+/* ------------------------- footer  ---------------------*/
+
+
+#contact {
+	width: 100%;
+	padding: 20px 0px;
+	  background-blend-mode: lighten;
+	      background-color: rgba(219, 219, 219, 0.5);
+	      background-color: rgba(44, 108, 204, 0.1);
+
+	      display: flex;
+	      justify-content: center;
+
+}
+
+.contactFooterContainer {
+	width: 900px;
+	/*padding: 20px*/
+	display: flex;
+	justify-content: center;
+}
+
+.contactInfo {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	background-color: #878787;
+	background-color: rgba(44, 108, 204, 0.9);
+	width: 50%;
+	padding: 30px 0px;
+	color: #fff;
+	border-radius: 20px;
+}
+
+.eachContactInfo {
+	text-indent: 0px;
+}
+
+#h3Contact {
+	margin-bottom: 20px;
+	color: #fff !important;
+	font-size: 25px;
+}
+
+#contact p {
+	color: #fff;
+	margin-bottom: 15px;
+	font-size: 16px;
+	font-family:Poppins;
+}
+
+
+footer{
+  padding: 5px 0px;
+  display: flex;
+  justify-content: center;
+}
+
+
+#copyrightText {
+	color: #9d9fa0;
+	margin: 0;
 }
