--- a/css/style.css
+++ b/css/style.css
@@ -200,6 +200,7 @@ nav ul li a i {
 		justify-content: space-between;
 		align-items: center;
 		width: 100%;
+		border-bottom: 1px white solid;
 	}
 
 	.toggle a {
@@ -212,9 +213,15 @@ nav ul li a i {
 		align-items: center;
 		font-family:Poppins;
 		font-weight: 400;
-	  	font-size: 18px;
+	  	font-size: 22px;
 		height: 100%;
 	}
+
+	.toggle i {
+		font-size: 22px;
+	}
+
+
 
 	nav {
 		display: flex;
@@ -223,10 +230,16 @@ nav ul li a i {
 		align-items: center;
 		height: auto;
 		width: 100%;
+
 	}
 
 	nav ul li a {
-		font-size: 18px;
+		font-size: 20px;
+		background-color: #2c6ccc;
+	}
+
+	nav ul li a:hover {
+		background-color: #2c6ccc;
 	}
 
 	.desktopView
@@ -238,31 +251,33 @@ nav ul li a i {
 		display: none;
 	}
 
+
 	#under65 {
-		width: 135px;
+		width: 100%;
 		height: 100%;
 	}
 
 	.under65List {
-		width: 220px;
+		width: 100%;
+
 	}
 
 	#medicare {
-		width: 140px;
+		width: 100%;
 		height: 100%;
 	}
 
 	.medicareList {
-		width: 280px;
+		width: 100%;
 	}
 
 	#moreInfo {
-		width: 140px;
+		width: 100%;
 		height: 100%;
 	}
 
 	.moreInfoList {
-		width: 140px;
+		width: 100%;
 	}
 
 	.active {
@@ -275,21 +290,25 @@ nav ul li a i {
 		height: auto;
 	}
 
+	nav ul li {
+		background-color: #2c6ccc;
+	}
+
+	nav ul li:hover {
+		background-color: #2c6ccc;
+	}
+
 	nav ul li ul li a{
-		font-size: 17px;
+		font-size: 19px;
 		text-align: left;
-		background-color: #175ab7;
 	}
 
-
-	.bgDarkBlue {
-		border: solid 1px #154c99;
-		background-color: #154c99;
-	}
-
-	.under65List a , .medicareList a, .moreInfoList a{
-		padding-left: 10px;
-		border: solid 1px #154c99;
+	.under65List a:before , .medicareList a:before, .moreInfoList a:before {
+		margin-left: 10px;
+		text-decoration:;
+		list-style-type: square; 
+		content: "❯ ";
+  		text-decoration: none;
 	}
 }
 
