--- a/css/style2.css
+++ b/css/style2.css
@@ -193,13 +193,14 @@ nav ul li a i {
 
 /*  - - - --- - -- - -- - - - - -NavBar Responsive Design --- - - - - - - - - - - - - - -- - */
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 600px) {
 
 	.toggle {
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
 		width: 100%;
+		border-bottom: 1px white solid;
 	}
 
 	.toggle a {
@@ -212,9 +213,15 @@ nav ul li a i {
 		align-items: center;
 		font-family:Poppins;
 		font-weight: 400;
-	  	font-size: 18px;
+	  	font-size: 22px;
 		height: 100%;
 	}
+
+	.toggle i {
+		font-size: 22px;
+	}
+
+
 
 	nav {
 		display: flex;
@@ -223,6 +230,16 @@ nav ul li a i {
 		align-items: center;
 		height: auto;
 		width: 100%;
+
+	}
+
+	nav ul li a {
+		font-size: 20px;
+		background-color: #2c6ccc;
+	}
+
+	nav ul li a:hover {
+		background-color: #2c6ccc;
 	}
 
 	.desktopView
@@ -234,13 +251,64 @@ nav ul li a i {
 		display: none;
 	}
 
+
+	#under65 {
+		width: 100%;
+		height: 100%;
+	}
+
+	.under65List {
+		width: 100%;
+
+	}
+
+	#medicare {
+		width: 100%;
+		height: 100%;
+	}
+
+	.medicareList {
+		width: 100%;
+	}
+
+	#moreInfo {
+		width: 100%;
+		height: 100%;
+	}
+
+	.moreInfoList {
+		width: 100%;
+	}
+
 	.active {
+		padding: 0px 40px;
 		width: 100%;
 		display: flex;
 		flex-direction: column;
-		justify-content: center;
-		align-items: center;
+		justify-content: flex-start;
+		align-items: flex-start;
 		height: auto;
+	}
+
+	nav ul li {
+		background-color: #2c6ccc;
+	}
+
+	nav ul li:hover {
+		background-color: #2c6ccc;
+	}
+
+	nav ul li ul li a{
+		font-size: 19px;
+		text-align: left;
+	}
+
+	.under65List a:before , .medicareList a:before, .moreInfoList a:before {
+		margin-left: 10px;
+		text-decoration:;
+		list-style-type: square; 
+		content: "❯ ";
+  		text-decoration: none;
 	}
 }
 
